# Physics-for-Cpp-Games-with-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  nodemon.json  package-lock.json  package.json
include/phy/: Ball.h  RigidBody.h  Vector.h  Wall.h  phy.h
pages/SAT_test/: main.html  main.js  main.wasm
pages/rigidBodyTest/: main.html  main.js  main.wasm
src/: SAT_resolution.cpp  SAT_test.cpp  ballAndWallCollision.cpp  ballCollision.cpp  bungeeJump.cpp  coupledOscillation.cpp  freeOscillation.cpp  inclinedRoll.cpp  main.cpp  particleCollision.cpp  pendulum.cpp  rigidBody.cpp  rigidBody_Bounce.cpp  rigidBody_Collision.cpp  rollingWheel.cpp  rope.cpp  satellite1.cpp  satellite2.cpp
src/SAT_test/: CMakeLists.txt  main.cpp
src/chapter1/: bouncingBall.cpp  forcesExample.cpp  frameExample.cpp  projectile.cpp
src/collision/: ballAndWallCollision.cpp
src/rigidBodyTest/: CMakeLists.txt  main.cpp
